--- a/Code/lab.ipynb
+++ b/Code/lab.ipynb
@@ -23,7 +23,7 @@
    "source": [
     "**Welcome to the LAB360 Agent App Notebook!**\n",
     "\n",
-    "In this notebook, you will build a Semantic Kernel Agent that can reason over our database of legal cases you deployed in the previous steps. You will also incorporate external web data (like historical rainfall), and use memory to improve its responses over time.\n",
+    "In this notebook, you will build a Semantic Kernel Agent that can reason over our database of legal cases you deployed in the previous steps. You will also incorporate external web service data, and use memory to improve its responses over time.\n",
     "\n",
     "Semantic Kernel is an open-source SDK developed by Microsoft that helps developers create advanced AI agents by combining:\n",
     "\n",
