--- a/Code/lab.ipynb
+++ b/Code/lab.ipynb
@@ -53,7 +53,7 @@
    "source": [
     "### Part 3.2: Setup the Agent App Python imports\n",
     "\n",
-    "> *Important Note:* In your lab environment, we already have the PIP packages pre-deployed that are needed by the import statements in the following code block, so you do not need to install these.  But just for reference and for future usage of this code, here are the packages used:\n",
+    "> **Note:** In your lab environment, we already have the PIP packages pre-deployed that are needed by the import statements in the following code block, so you do not need to install these.  But just for reference and for future usage of this code, here are the packages used:\n",
     "> - PostgreSQL connectivity (`psycopg2`, `psycopg-binary`, `psycopg-pool`)\n",
     "> - Modeling and validation (`pydantic`)\n",
     "> - OpenAI and Semantic Kernel integration (`openai`, `semantic-kernel`)\n",
@@ -69,7 +69,9 @@
     "\n",
     "1. Run the cell below using the \"▶\" icon next to the cell.\n",
     "\n",
-    "1. This will run the code and show the output below.  Since these are just imports, there is nothing to show at the end other than a check mark showing success."
+    "1. This will run the code and show the output below.  Since these are just imports, there is nothing to show at the end other than a check mark showing success.\n",
+    "\n",
+    "    > **Note:** The first time this code block is ran, it may take around 20-30 seconds."
    ]
   },
   {
@@ -119,9 +121,15 @@
     "\n",
     "    `PS C:\\Users\\LabUser\\Downloads\\pg-sk-agents-lab> .\\Scripts\\get_env.ps1`\n",
     "\n",
-    "1. From the output of the script in the terminal, copy the values for `AZURE_OPENAI_ENDPOINT`, `AZURE_OPENAI_KEY`, `DB_CONFIG - host` each into the variables in the code block below:\n",
+    "1. From the output of the script in the terminal, copy the values for the following each into the variables in the code block below:\n",
+    "    - `AZURE_OPENAI_ENDPOINT`\n",
+    "    - `AZURE_OPENAI_KEY`\n",
+    "    - `DB_CONFIG - HOST`\n",
+    "    - `DB_CONFIG - PASSWORD`\n",
     "\n",
-    "1. For the values for `user` and `password`, you can get these from the Skillable Lab Manual, Step {TBD}\n",
+    "    > **Note:** For `DB_CONFIG - PASSWORD`, this is a very long string due to being an Entra ID Access Token, be sure to copy the entire string as the password.\n",
+    "\n",
+    "1. For the value for `{USER}`, this will be your Lab Username Credential, you can get these from the Lab Manual, in Part 3.3\n",
     "\n",
     "1. Once you have each of these fields filled in, then run the cell below using the \"▶\" icon next to the cell.  This will run the code and show the output below.  You will reuse these variables and objects throughout the lab notebook below.\n",
     "\n",
@@ -135,8 +143,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "AZURE_OPENAI_ENDPOINT   = \"{ENDPOINT}\"\n",
-    "AZURE_OPENAI_KEY        = \"{KEY}\"\n",
+    "AZURE_OPENAI_ENDPOINT   = \"{AZURE_OPENAI_ENDPOINT}\"\n",
+    "AZURE_OPENAI_KEY        = \"{AZURE_OPENAI_KEY}\"\n",
     "AZURE_OPENAI_DEPLOYMENT = \"gpt-4o\"\n",
     "\n",
     "DB_CONFIG = {\n",
@@ -416,6 +424,14 @@
     "    - You should now be Connected to your database in the `create_graph.sql` file\n",
     "    - In the editor window, click the \">\" button in the top right to run the script\n",
     "    - This will build our graph database via the Apache AGE extension in our Azure PostgreSQL database using our loaded 377 legal cases\n",
+    "\n",
+    "1. Next, because we are using the Apache AGE PostgreSQL Extension to provide us Graph database capabilities, we need to enable the Extension on our database.\n",
+    "    - Run the following PowerShell script within VS Code\n",
+    "    - Within VS Code, open a new terminal, and at the following path, enter:\n",
+    "\n",
+    "        `PS C:\\Users\\LabUser\\Downloads\\pg-sk-agents-lab> .\\Scripts\\load_age.ps1`\n",
+    "\n",
+    "        > **Note:** This will run through 3 main commands, all together will take around 60-120 seconds.\n",
     "\n",
     "1. Review the code:\n",
     "    - This plugin allows the agent to find legal cases that are not only semantically similar to a user's query but also highly cited by other cases - providing both relevance and legal importance. The `@kernel_function` decorator makes this method callable by the agent.\n",
