Minor text edit

--- a/Code/lab.ipynb
+++ b/Code/lab.ipynb
@@ -303,7 +303,7 @@
     "    - Once prompted, select the Connection you made in the earlier steps in the lab\n",
     "    - You will then be asked the port number for the Connection, just hit `enter` to accept the default\n",
     "    - You should now be Connected to your database in the `setup_reranker.sql` file\n",
-    "    - Next we need to replace the `{ENDPOINT}` and `{KEY}` tokens with the real values.  You can get these in the Skillable Lab Manual, on step {TBD}\n",
+    "    - Next we need to replace the `{ENDPOINT}` and `{KEY}` tokens with the real values.  You can get these in the Skillable Lab Manual, on Part 3.6\n",
     "    - In the editor window, click the \">\" button in the top right to run the script\n",
     "    - This will setup our connection to Azure ML via our `azure_ai` PostgreSQL database extension, and create 2 PostgresSQL PL/SQL functions needed for semantic re-ranking\n",
     "\n",
@@ -313,8 +313,8 @@
     "        - The function is decorated with `@kernel_function`, which makes it available to the agent as a callable tool-this is how Semantic Kernel enables function calling automatically based on user intent.\n",
     "\n",
     "    - Check out the SQL logic inside the code, notice how it includes two key phases:\n",
-    "        - A vector similarity search using OpenAI-generated embeddings to find top 60 candidate cases.\n",
-    "        - A semantic re-ranking step that uses an external re-ranker model (semantic_relevance) to evaluate and reorder those 60 based on relevance scores.\n",
+    "        - (Phase 1) A vector similarity search using OpenAI-generated embeddings to find top 60 candidate cases.\n",
+    "        - (Phase 2) A semantic re-ranking step that uses an external re-ranker model (semantic_relevance) to evaluate and reorder those 60 based on relevance scores.\n",
     "        - This hybrid approach helps ensure that even when the user’s phrasing doesn’t exactly match the database text, relevant results can still be surfaced based on meaning and context.\n",
     "\n",
     "    - Observe how this plugin builds on the earlier keyword search:\n",
