Fix typos, trailing spaces, sql style and markdown issues

--- a/Code/lab.ipynb
+++ b/Code/lab.ipynb
@@ -425,7 +425,7 @@
     "    - In the editor window, click the \">\" button in the top right to run the script\n",
     "    - This will build our graph database via the Apache AGE extension in our Azure PostgreSQL database using our loaded 377 legal cases\n",
     "\n",
-    "1. Next, because we are using the Apache AGE PostgreSQL Extension to provide us Graph database capabilities, we need to enable the Extension on our database.\n",
+    "1. Next, because we are using the Apache AGE PostgreSQL extension to provide us Graph database capabilities, we need to enable the extension on our database.\n",
     "    - Run the following PowerShell script within VS Code\n",
     "    - Within VS Code, open a new terminal, and at the following path, enter:\n",
     "\n",
