--- a/Code/lab.ipynb
+++ b/Code/lab.ipynb
@@ -68,6 +68,12 @@
     "> - OpenAI and Semantic Kernel integration (`openai`, `semantic-kernel`)\n",
     "> - Notebook compatibility (`nest_asyncio`, `ipykernel`)\n",
     "\n",
+    "Local setup:\n",
+    "\n",
+    "```python\n",
+    "python -m pip install -r requirements.txt\n",
+    "```\n",
+    "\n",
     "##### 🧠 *Technical Notes*\n",
     "\n",
     "This set of imports prepares the technical foundation for building an AI-powered agent that interacts with a PostgreSQL database and OpenAI services. `nest_asyncio` is used to allow nested event loops, which is important when running asynchronous code inside a Jupyter notebook. Core Python modules like `os`, `asyncio`, `uuid`, and `requests` handle environment access, asynchronous execution, unique ID generation, and external API calls, respectively. `psycopg2` provides database connectivity to PostgreSQL, while `pydantic` offers structured data validation and modeling.\n",
@@ -85,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "844b751d",
    "metadata": {},
    "outputs": [],
@@ -106,7 +112,7 @@
     "from semantic_kernel.functions import kernel_function, KernelArguments\n",
     "\n",
     "from semantic_kernel import Kernel\n",
-    "from semantic_kernel.connectors.memory.postgres import PostgresMemoryStore\n",
+    "from semantic_kernel.connectors.postgres import PostgresStore\n",
     "from semantic_kernel.memory.semantic_text_memory import SemanticTextMemory\n",
     "from semantic_kernel.connectors.ai.open_ai.services.azure_text_embedding import AzureTextEmbedding"
    ]
@@ -841,7 +847,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": ".venv (3.12.10)",
    "language": "python",
    "name": "python3"
   },
@@ -855,7 +861,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.3"
+   "version": "3.12.10"
   }
  },
  "nbformat": 4,
