Minor updates to Semantic Operators Text.

--- a/Code/lab.ipynb
+++ b/Code/lab.ipynb
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "id": "844b751d",
    "metadata": {},
    "outputs": [],
@@ -139,18 +139,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "id": "a1d2a21a",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "EarlGreyTea$\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "load_dotenv(override=True)\n",
     "\n",
@@ -200,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "id": "284bbcf2",
    "metadata": {},
    "outputs": [],
@@ -276,32 +268,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "id": "a76e081f",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "// Functions the Agent Called: //\n",
-      "count_cases was called\n",
-      "search_cases was called\n",
-      "// Agent Response: //\n",
-      "There are 377 cases in the database. Two cases related to \"water leaking\" are identified:\n",
-      "\n",
-      "### 1. **Alexander v. Sanford**\n",
-      "**Reasoning:** This case involves claims of negligence and breach of duty related to construction defects, which may include issues related to water leaking as part of the broader claims involving condominium defects.\n",
-      "**Summary:** The court ruled on whether claims filed by homeowners against the defendants were timely and addressed attorney fees arising from allegations of a frivolous lawsuit.\n",
-      "\n",
-      "### 2. **Warner v. Design & Build Homes, Inc.**\n",
-      "**Reasoning:** The case deals with structural defects and mold, which are often associated with water leakage issues, making it relevant to the topic.\n",
-      "**Summary:** The court upheld a summary judgment, ruling against the plaintiffs since they were not third-party beneficiaries under the subcontractor agreement and had purchased the property \"as is,\" disclaiming implied warranties.\n",
-      "\n",
-      "Let me know if you would like further details about these cases or additional cases regarding water leaks.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "settings = OpenAIChatPromptExecutionSettings()\n",
     "    \n",
@@ -335,7 +305,7 @@
    "id": "1206c174",
    "metadata": {},
    "source": [
-    "### Part 3.6: Improve Agent Accuracy by Adding Semantic Re-ranking Query Plugin\n",
+    "### Part 3.6: Improve Agent Accuracy by Adding Semantic Operators .rank() function\n",
     "\n",
     "##### 🧠 *Technical Notes*\n",
     "\n",
@@ -345,24 +315,14 @@
     "\n",
     "##### ⚙️ *Code Review Tasks*\n",
     "\n",
-    "1. Before running this code block, we need to run a SQL script on the database.\n",
-    "    - In VS Code, in the folder structure, in the folder `./Scripts/` navigate to the `setup_reranker.sql` file\n",
-    "    - Once inside the file, still in VS Code, press on the keyboard `CTRL+SHIFT+P` to open the VS Code action panel, type `PGSQL Connect` and select the top `PGSQL: Connect` option\n",
-    "    - Once prompted, select the Connection you made in the earlier steps in the lab\n",
-    "    - You will then be asked the port number for the Connection, just hit `enter` to accept the default\n",
-    "    - You should now be Connected to your database in the `setup_reranker.sql` file\n",
-    "    - Next we need to replace the `{ENDPOINT}` and `{KEY}` tokens with the real values.  You can get these in the Skillable Lab Manual, on Part 3.6\n",
-    "    - In the editor window, click the \">\" button in the top right to run the script\n",
-    "    - This will setup our connection to Azure ML via our `azure_ai` PostgreSQL database extension, and create 2 PostgresSQL PL/SQL functions needed for semantic re-ranking\n",
-    "\n",
     "1. Review the code:\n",
     "    - Notice the following enhancements:\n",
     "        - This plugin introduces a function called `search_semantic_reranked_cases`, designed to deliver higher-quality search results by understanding the semantic meaning of the query rather than relying on basic keyword matches.\n",
     "        - The function is decorated with `@kernel_function`, which makes it available to the agent as a callable tool-this is how Semantic Kernel enables function calling automatically based on user intent.\n",
     "\n",
     "    - Check out the SQL logic inside the code, notice how it includes two key phases:\n",
-    "        - (Phase 1) A vector similarity search using OpenAI-generated embeddings to find top 60 candidate cases.\n",
-    "        - (Phase 2) A semantic re-ranking step that uses an external re-ranker model (semantic_relevance) to evaluate and reorder those 60 based on relevance scores.\n",
+    "        - (Phase 1) A vector similarity search using OpenAI-generated embeddings to find top 40 candidate cases.\n",
+    "        - (Phase 2) A semantic re-ranking step that uses an external re-ranker model (semantic_relevance) to evaluate and reorder those 40 based on relevance scores.\n",
     "        - This hybrid approach helps ensure that even when the user’s phrasing doesn’t exactly match the database text, relevant results can still be surfaced based on meaning and context.\n",
     "\n",
     "    - Observe how this plugin builds on the earlier keyword search:\n",
@@ -378,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "id": "ef674482",
    "metadata": {},
    "outputs": [],
@@ -493,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "id": "9d2ec57e",
    "metadata": {},
    "outputs": [],
@@ -582,69 +542,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "id": "51df009d",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "// Functions the Agent Called: //\n",
-      "search_graph_cases was called\n",
-      "search_semantic_reranked_cases was called\n",
-      "count_cases was called\n",
-      "// Agent Response: //\n",
-      "### Total Number of Cases: \n",
-      "There are **377 cases** in the database relevant to general legal matters.\n",
-      "\n",
-      "### 10 Highly Relevant Cases Regarding Water Leaks in Apartments:\n",
-      "\n",
-      "#### Cases with High Citations and Semantic Relevance:\n",
-      "1. **Wilber Development Corp. v. Les Rowland Constr., Inc.**\n",
-      "   - **Reasoning:** Discusses liability and damages related to water drainage modifications affecting properties.\n",
-      "   - **Opinion Summary:** Storm drainage facilities caused unnatural water flow, but the court dismissed the takings claim.\n",
-      "\n",
-      "2. **Schedler v. Wagner**\n",
-      "   - **Reasoning:** Addresses liability and tenant issues on water drainage affecting property.\n",
-      "   - **Opinion Summary:** The jury awarded damages for injuries caused by icy outdoor conditions.\n",
-      "\n",
-      "3. **Le Vette v. Hardman Estate**\n",
-      "   - **Reasoning:** Concerns damage due to water leakage from an upper story and landlord responsibilities.\n",
-      "   - **Opinion Summary:** Landlords held liable for water damages caused during lease periods.\n",
-      "\n",
-      "4. **Papac v. City of Montesano**\n",
-      "   - **Reasoning:** Relates to water damage arising from municipal infrastructure changes impacting property.\n",
-      "   - **Opinion Summary:** City was responsible for property damage due to flawed drainage management.\n",
-      "\n",
-      "5. **Trigg v. Timmerman**\n",
-      "   - **Reasoning:** Discusses water drainage disputes between neighboring landowners.\n",
-      "   - **Opinion Summary:** Farm runoff disputes led to restraining orders for drainage diversion.\n",
-      "\n",
-      "6. **Imperial Candy Co. v. City of Seattle**\n",
-      "   - **Reasoning:** Evaluates municipal liability due to water main breakages causing property damage.\n",
-      "   - **Opinion Summary:** City held liable for basement flooding and damages.\n",
-      "\n",
-      "7. **Tombari v. City of Spokane**\n",
-      "   - **Reasoning:** Implicates water overflow from public sewers impacting residential property.\n",
-      "   - **Opinion Summary:** Municipality negligence caused basement damage from sewer flooding.\n",
-      "\n",
-      "8. **Woolworth Co. v. City of Seattle**\n",
-      "   - **Reasoning:** Evaluates municipal sewer maintenance and damages from water overflow.\n",
-      "   - **Opinion Summary:** City inadequate sewer management resulted in basement property damage.\n",
-      "\n",
-      "9. **Uhl Bros. v. Hull**\n",
-      "   - **Reasoning:** Direct issue of water leaking from neglected pipes causing substantial damage.\n",
-      "   - **Opinion Summary:** Tenants were awarded damages for water harm from sublet areas.\n",
-      "\n",
-      "10. **Downie v. City of Renton**\n",
-      "   - **Reasoning:** Challenges city's water drainage practices causing damage to private property.\n",
-      "   - **Opinion Summary:** Prescriptive easement for city drainage upheld, dismissing owner's claims.\n",
-      "\n",
-      "These cases address landlord-tenant, municipal liability, and neighboring property disputes concerning water leakage and provide critical grounds for legal remedies.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Re-Create agent with new plugins\n",
     "agent = ChatCompletionAgent(\n",
@@ -696,7 +597,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "id": "bf9190f3",
    "metadata": {},
    "outputs": [],
@@ -763,68 +664,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "id": "3b672c6c",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "// Functions the Agent Called: //\n",
-      "get_historical_rainfall was called\n",
-      "search_graph_cases was called\n",
-      "// Agent Response: //\n",
-      "### Historical Rainfall Evidence\n",
-      "On 2024-02-01 in Seattle, WA, a total of 5.1 mm of precipitation was recorded. This data could serve as evidence regarding environmental factors potentially relevant to your client's case.\n",
-      "\n",
-      "### Highly Cited Cases on Water Leaking in Apartments (Summary and Reasoning)\n",
-      "Here are 10 highly relevant cases with significant citations related to issues involving water damage and property disputes:\n",
-      "\n",
-      "1. **Stuart v. Coldwell Banker Commercial Group, Inc.**\n",
-      "   - Reasoning: Discusses implied warranty of habitability and negligent construction in property disputes.\n",
-      "   - Opinion: Incorrect application of statutes of limitation reversed the decision.\n",
-      "\n",
-      "2. **Wilber Development Corp. v. Les Rowland Construction, Inc.**\n",
-      "   - Reasoning: Addresses damages caused by altered water flow and inverse condemnation claims.\n",
-      "   - Opinion: Storm drainage alterations by developers dismissed because of insufficient evidence.\n",
-      "\n",
-      "3. **Wood v. City of Tacoma**\n",
-      "   - Reasoning: Involves damages resulting from storm sewer construction impacting property.\n",
-      "   - Opinion: Damages claim against the city dismissed after non-suit judgment.\n",
-      "\n",
-      "4. **Bach v. Sarich**\n",
-      "   - Reasoning: Case about unauthorized construction impacting the natural state of Bitter Lake.\n",
-      "   - Opinion: Construction over Bitter Lake deemed disruptive and enjoinable.\n",
-      "\n",
-      "5. **Foisy v. Wyman**\n",
-      "   - Reasoning: Examines utility charges and rental disputes tied to water issues in leased property.\n",
-      "   - Opinion: Damages related to unpaid rent and utilities rightly awarded to the property owner.\n",
-      "\n",
-      "6. **Schedler v. Wagner**\n",
-      "   - Reasoning: Focuses on liability due to tenant injury from icy conditions potentially related to poor water drainage.\n",
-      "   - Opinion: Tenant injury awarded damages for icy walkway negligence.\n",
-      "\n",
-      "7. **Papac v. City of Montesano**\n",
-      "   - Reasoning: Evaluates property damage due to improper city drainage systems and nuisance maintenance.\n",
-      "   - Opinion: City held liable for damages related to flooded property.\n",
-      "\n",
-      "8. **Laurelon Terrace, Inc. v. City of Seattle**\n",
-      "   - Reasoning: Examines instructions involving flooding damages and contributory negligence in lawsuits.\n",
-      "   - Opinion: Incorrect contributory negligence instruction led to retrial.\n",
-      "\n",
-      "9. **DeHoney v. Gjarde**\n",
-      "   - Reasoning: Contract disputes over water-related building defects in a dance academy case.\n",
-      "   - Opinion: Water damage in improperly finished construction was acted upon contractually.\n",
-      "\n",
-      "10. **Pappas v. Zerwoodis**\n",
-      "    - Reasoning: Tenant suing landlord for delayed repairs related to water leakage issues.\n",
-      "    - Opinion: Tenant's damages for delayed repairs dismissed as non-recoverable.\n",
-      "\n",
-      "These cases include scenarios ranging from property habitability issues, construction defects involving water flow, and tenant-litigation against landlords—all providing precedential reasoning valuable to similar claims.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Re-Create agent with new plugins\n",
     "agent = ChatCompletionAgent(\n",
@@ -884,49 +727,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": null,
    "id": "40f914df",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "// Functions the Agent Called: //\n",
-      "search_cases was called\n",
-      "search_graph_cases was called\n",
-      "// Prompt with Added Memory Context: //\n",
-      "Here are things we’ve discussed before:\n",
-      "- My client has lived in their apartment for 10 years\n",
-      "- I am a real estate lawyer\n",
-      "- That's helpful to know! As a real estate lawyer, your interests likely revolve around cases related to property law, land use regulations, zoning disputes, lease agreements, title issues, construction law, and real estate transactions. If there's a specific topic or issue you'd like me to help you research, let me know, and I'll find relevant case law or resources for you.\n",
-      "\n",
-      "My client has lived in their apartment for 10 years\n",
-      "// Agent Response: //\n",
-      "Several cases are relevant to long-term tenancy or tenant rights based on the search results. Here are the most notable ones, with their relevance explained:\n",
-      "\n",
-      "### Relevant Cases:\n",
-      "1. **Eastwood v. Horse Harbor Foundation, Inc.**\n",
-      "   - **Reasoning**: This case highlights tenants' obligations under property law, including waste and damage caused by use over time, which is relevant to long-term tenants living on the property for extended periods.\n",
-      "   - **Summary**: The court ruled that tenants have a tort duty not to cause waste, independent of lease covenants.\n",
-      "\n",
-      "2. **Foisy v. Wyman**  \n",
-      "   - **Reasoning**: The case demonstrates unlawful detainer proceedings and landlord-tenant obligations when prior lease agreements evolve into potential tenancy disputes.\n",
-      "   - **Summary**: The court upheld the landlord’s claims for possession and unpaid rent after the tenant overstayed the lease without payment.\n",
-      "\n",
-      "3. **McCutcheon v. United Homes Corp.**\n",
-      "   - **Reasoning**: Highlights negligence in maintaining leased premises, which over time could affect tenant rights, particularly after extended tenancy periods.\n",
-      "   - **Summary**: The landlord was found negligent due to unsafe conditions that caused injury.\n",
-      "\n",
-      "4. **Howard v. Horn**\n",
-      "   - **Reasoning**: Explores tenant protections and limitations of landlord liability for maintaining premises during tenancy.\n",
-      "   - **Summary**: The court affirmed that landlords are not liable for injuries caused by defects unless specific obligations in the lease exist.\n",
-      "\n",
-      "### Next Steps\n",
-      "These cases provide an understanding of tenant protections, obligations, and landlord responsibilities, which could relate to your client’s extended tenancy of 10 years. Let me know if you'd like further exploration into one specific case or area.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Try running the following 3 prompts, one at a time, this helps to showcase the memory functionality as the Agent keeps track of these facts\n",
     "#user_query = \"I am a real estate lawyer\"\n",
