Small fix on dotenv.

--- a/Code/lab.ipynb
+++ b/Code/lab.ipynb
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "id": "844b751d",
    "metadata": {},
    "outputs": [],
@@ -142,7 +142,15 @@
    "execution_count": null,
    "id": "a1d2a21a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "EarlGreyTea$\n"
+     ]
+    }
+   ],
    "source": [
     "load_dotenv(override=True)\n",
     "\n",
@@ -165,9 +173,7 @@
     "    \"password\": os.environ[\"AZURE_PG_PASSWORD\"],\n",
     "    \"port\":     os.environ[\"AZURE_PG_PORT\"],\n",
     "    \"sslmode\":  os.environ.get(\"AZURE_PG_SSLMODE\", \"require\"),\n",
-    "}\n",
-    "\n",
-    "print(os.environ[\"AZURE_PG_PASSWORD\"])"
+    "}"
    ]
   },
   {
