Revise SQL script instructions and lab completion steps
Updated instructions for running SQL scripts and clarified next steps in the lab.

--- a/Code/lab.ipynb
+++ b/Code/lab.ipynb
@@ -429,22 +429,7 @@
     "\n",
     "##### ⚙️ *Code Review Tasks*\n",
     "\n",
-    "1. Before running this code block, we need to run a SQL script on the database.\n",
-    "    - In VS Code, in the folder structure, in the folder `./Scripts/` navigate to the `create_graph.sql` file\n",
-    "    - Once inside the file, still in VS Code, press on the keyboard `CTRL+SHIFT+P` to open the VS Code action panel, type `PGSQL Connect` and select the top `PGSQL: Connect` option\n",
-    "    - Once prompted, select the Connection you made in the earlier steps in the lab\n",
-    "    - You will then be asked the port number for the Connection, just hit `enter` to accept the default\n",
-    "    - You should now be Connected to your database in the `create_graph.sql` file\n",
-    "    - In the editor window, click the \">\" button in the top right to run the script\n",
-    "    - This will build our graph database via the Apache AGE extension in our Azure PostgreSQL database using our loaded 377 legal cases\n",
-    "\n",
-    "1. Next, because we are using the Apache AGE PostgreSQL extension to provide us Graph database capabilities, we need to enable the extension on our database.\n",
-    "    - Run the following PowerShell script within VS Code\n",
-    "    - Within VS Code, open a new terminal, and at the following path, enter:\n",
-    "\n",
-    "        `PS C:\\Users\\LabUser\\Downloads\\pg-sk-agents-lab> .\\Scripts\\load_age.ps1`\n",
-    "\n",
-    "        > **Note:** This will run through 3 main commands, all together will take around 60-120 seconds.\n",
+    "1. **IMPORTANT**: Go back to the lab's **Instructions** pane to run a SQL query and PowerShell script.\n",
     "\n",
     "1. Review the code:\n",
     "    - This plugin allows the agent to find legal cases that are not only semantically similar to a user's query but also highly cited by other cases - providing both relevance and legal importance. The `@kernel_function` decorator makes this method callable by the agent.\n",
@@ -824,25 +809,9 @@
    "id": "610d1a23",
    "metadata": {},
    "source": [
-    "## Congratulations you have completed the Lab!"
+    "### Proceed in the lab's **Instructions** pane to complete the lab!"
    ]
   },
-  {
-   "cell_type": "markdown",
-   "id": "6fb9dba0",
-   "metadata": {},
-   "source": [
-    "## Next Steps\n",
-    "\n",
-    "We have curated additional resources to enhance your ongoing journey in building AI agents and AI-powered applications with Azure Database for PostgreSQL.\n",
-    "\n",
-    "- A more detailed blog post about the legal case example of lab in the [GraphRAG Solution for Azure Database for PostgreSQL](https://aka.ms/pg-graphrag) check the code in the [GitHub repository](https://aka.ms/postgres-graphrag-solution).\n",
-    "- Learn more about [Graph data in Azure Database for PostgreSQL](https://aka.ms/age-blog).\n",
-    "- Get familiar with the new [PostgreSQL extension for Visual Studio Code]().\n",
-    "- Learn more about Semantic Ranking with the [Semantic Ranker Solution Accelerator](https://aka.ms/semantic-ranker-solution-accelerator-pg-blog) and its associated [GitHub repository](https://aka.ms/pg-ranker-repo).\n",
-    "- Finally, our more recent solutions accelerator [Build your own advanced AI Copilot with Postgres](http://aka.ms/pg-byoac-docs) teaches you how to extract data from statements of work (SOWs) and invoices in PDF files and use AI to validate them, more details in the [GitHub repo](http://aka.ms/pg-byoac-repo)."
-   ]
-  }
  ],
  "metadata": {
   "kernelspec": {
