--- a/Code/lab.ipynb
+++ b/Code/lab.ipynb
@@ -128,14 +128,14 @@
     "\n",
     "Before running the notebook, we need to ensure our environment variables are properly set up. If you've followed the lab instructions and run `azd up` successfully, most of the required environment variables should already be written to a `.env` file in the project root by the `write_env.sh` script.\n",
     "\n",
-    "The `.env` file should contain:\n",
-    "- Azure OpenAI configuration (endpoint, key, deployment)\n",
-    "- Database configuration (host, name, user, password, etc.)\n",
-    "\n",
-    "If you need to create a `.env` file manually, you can copy the `.env.sample` file in the project root and fill in your specific values.\n",
-    "\n",
-        > **Note:** Refer to the lab's **Instructions** pane for all the values you'll need.",
-    "\n",
+    "The `.env` file should contain:",
+    "- Azure OpenAI configuration (endpoint, key, deployment)",
+    "- Database configuration (host, name, user, password, etc.)",
+    "",
+    "If you need to create a `.env` file manually, you can copy the `.env.sample` file in the project root and fill in your specific values.",
+    "",
+    "> **Note:** Refer to the lab's **Instructions** pane for all the values you'll need.",
+    "",
     "Run the following code block to load the environment variables from the `.env` file:"
    ]
   },
