Revise SQL and PowerShell execution steps in lab
Updated instructions for running SQL scripts and PowerShell in the lab.

--- a/Code/lab.ipynb
+++ b/Code/lab.ipynb
@@ -429,22 +429,7 @@
     "\n",
     "##### ⚙️ *Code Review Tasks*\n",
     "\n",
-    "1. Before running this code block, we need to run a SQL script on the database.\n",
-    "    - In VS Code, in the folder structure, in the folder `./Scripts/` navigate to the `create_graph.sql` file\n",
-    "    - Once inside the file, still in VS Code, press on the keyboard `CTRL+SHIFT+P` to open the VS Code action panel, type `PGSQL Connect` and select the top `PGSQL: Connect` option\n",
-    "    - Once prompted, select the Connection you made in the earlier steps in the lab\n",
-    "    - You will then be asked the port number for the Connection, just hit `enter` to accept the default\n",
-    "    - You should now be Connected to your database in the `create_graph.sql` file\n",
-    "    - In the editor window, click the \">\" button in the top right to run the script\n",
-    "    - This will build our graph database via the Apache AGE extension in our Azure PostgreSQL database using our loaded 377 legal cases\n",
-    "\n",
-    "1. Next, because we are using the Apache AGE PostgreSQL extension to provide us Graph database capabilities, we need to enable the extension on our database.\n",
-    "    - Run the following PowerShell script within VS Code\n",
-    "    - Within VS Code, open a new terminal, and at the following path, enter:\n",
-    "\n",
-    "        `PS C:\\Users\\LabUser\\Downloads\\pg-sk-agents-lab> .\\Scripts\\load_age.ps1`\n",
-    "\n",
-    "        > **Note:** This will run through 3 main commands, all together will take around 60-120 seconds.\n",
+    "1. **IMPORTANT**: Go back to the lab's **Instructions** pane to run a SQL query and PowerShell script.\n",
     "\n",
     "1. Review the code:\n",
     "    - This plugin allows the agent to find legal cases that are not only semantically similar to a user's query but also highly cited by other cases - providing both relevance and legal importance. The `@kernel_function` decorator makes this method callable by the agent.\n",
