Fix formatting of note in lab.ipynb

--- a/Code/lab.ipynb
+++ b/Code/lab.ipynb
@@ -134,7 +134,7 @@
     "\n",
     "If you need to create a `.env` file manually, you can copy the `.env.sample` file in the project root and fill in your specific values.\n",
     "\n",
-    "&nbsp;&nbsp;> **Note:** Refer to the lab's **Instructions** pane for all the values you'll need.",
+    "> **Note:** Refer to the lab's **Instructions** pane for all the values you'll need.",
     "\n",
     "Run the following code block to load the environment variables from the `.env` file:"
    ]
