Fix typo in lab instructions markdown

--- a/Code/lab.ipynb
+++ b/Code/lab.ipynb
@@ -811,7 +811,8 @@
    "id": "610d1a23",
    "metadata": {},
    "source": [
-    "### Proceed in the lab's **Instructions** pane to complete the lab!"
+    "---\n"
+    "### Proceed with the lab's **Instructions** pane to complete the lab!"
    ]
   }
  ],
